--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Initializer for ABC News projects",
   "bin": {
-    "create": "./bin/index.js"
+    "create": "bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/abcnews/create.git"
+    "url": "git+https://github.com/abcnews/create.git"
   },
   "bugs": {
     "url": "https://github.com/abcnews/create/issues"
